--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -1,3 +1,4 @@
 <a href="{{ .Permalink }}">
-  <h2 class="f3 b lh-title mb1 primary">{{ .title }}</h2>
+  <h2>{{ .Params.title }}</h2>
+  <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.logo }}">
 </a>
