updated article page and li

--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -1,4 +1,4 @@
 <a href="{{ .Permalink }}">
   <h2>{{ .Params.title }}</h2>
-  <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.logo }}">
+  <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.client_logo }}">
 </a>
