--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ partial "head" . }}
-{{ partial "nav" . }}
-{{ partial "jumbotron" (dict "imageUrl" "/img/7.jpg" "title" "This is where the heading goes" "subtitle" "This is where the subtitle goes") }}
-  {{ .Content }}
-{{ partial "footer" . }}
+
+<div>
+  <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.client_logo }}">
+</div>
+
+{{ .Content }}
