--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,6 +1,6 @@
-<nav>
+<nav class="tc">
   <!-- Logo -->
-  <a href="/">
+  <a href="/" class="dib">
     <img src="/img/funke_logo.png" alt="Funke und Glanz Logo"/>
   </a>
 </nav>
