--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,23 +1,38 @@
 {{ partial "head" . }}
 {{ partial "nav" . }}
 
-<div>
-  <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.client_logo }}">
-  <div class="">
-    <h1>{{ .Params.slogan }}</h1>
-    <ul>
-      <li><span>Client:</span> {{ .Params.client_name }}</li>
-      {{ if .Params.website }}
-        <li><span>Website:</span> <a href="{{ .Params.website }}">{{ .Params.website }}</a></li>
-      {{ end }}
-      {{ if .Params.our_role }}
-        <li><span>Our Role:</span> {{ .Params.our_role }}</li>
-      {{ end }}
-      {{ if .Params.services }}
-        <li><span>Our Homework:</span> {{ .Params.services }}</li>
-      {{ end }}
-    </ul>
+<article class="pa3 tc">
+  <div>
+    <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.client_logo }}">
+    <div class="">
+      <div class="tc">
+        <h1 class="b pt3 pb3 bt bb dib ttu ffh f1 lh-solid ffh">{{ .Params.slogan }}</h1>
+      </div>
+      <ul class="pt4 pt">
+        <li class="dib"><span class="b ttu ffh">Client</span> {{ .Params.client_name }}</li>
+        {{ if .Params.website }}
+          | <li class="dib"><span class="b ttu ffh">Website</span> <a href="{{ .Params.website }}">{{ .Params.website }}</a></li>
+        {{ end }}
+        {{ if .Params.our_role }}
+          <li><span class="b ttu ffh">Our Role</span> {{ .Params.our_role }}</li>
+        {{ end }}
+        {{ if .Params.services }}
+          <li><span class="b ttu ffh">Our Homework</span> {{ .Params.services }}</li>
+        {{ end }}
+      </ul>
+    </div>
   </div>
-</div>
+  <ul>
+    {{ range .Params.showcase.images }}
+    <li>
+      <h3>{{ .title }}</h3>
+      <img src="{{ .image }}" alt="{{ .title }}">
+      {{ if .description }}
+        <p>{{ .description }}</p>
+      {{ end }}
+    </li>
+    {{ end }}
+  </ul>
+</article>
 
 {{ .Content }}
