--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -3,12 +3,12 @@
 
 <article class="pa3 tc">
   <div>
-    <img alt="{{ .Params.client_name }} Logo" src="{{ .Params.client_logo }}">
+    <img class="w4 mt3 mb4" alt="{{ .Params.client_name }} Logo" src="{{ .Params.client_logo }}">
     <div class="">
       <div class="tc">
-        <h1 class="b pt3 pb3 bt bb dib ttu ffh f1 lh-solid ffh">{{ .Params.slogan }}</h1>
+        <h1 class="b pt4 pb4 bt bb dib ttu ffh f1 lh-title ffh b--grey-2">{{ .Params.slogan }}</h1>
       </div>
-      <ul class="pt4 pt">
+      <ul class="pt4 pt f6">
         <li class="dib"><span class="b ttu ffh">Client</span> {{ .Params.client_name }}</li>
         {{ if .Params.website }}
           | <li class="dib"><span class="b ttu ffh">Website</span> <a href="{{ .Params.website }}">{{ .Params.website }}</a></li>
@@ -22,10 +22,13 @@
       </ul>
     </div>
   </div>
+  <div class="mb4 mt4 f2 ffh">
+    <svg class="dib" height="30" width="60" viewBox="0 0 60 30"><path fill="transparent" stroke="#b5b5b5" stroke-width="1" d="M0,0 L30,30 L60,0"/></svg>
+  </div>
   <ul>
     {{ range .Params.showcase.images }}
     <li>
-      <h3>{{ .title }}</h3>
+      <h3 class="ttu tl pl2 bb pb1 ffh b--grey-2">{{ .title }}</h3>
       <img src="{{ .image }}" alt="{{ .title }}">
       {{ if .description }}
         <p>{{ .description }}</p>
