--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <head>
 
     <html lang="en-US">
-      <title>{{ .Title }} | Kaldi</title>
+      <title>{{ .Title }} | Funke und Glanz</title>
       <link rel="stylesheet" href="/css/main.css"/>
 
       <meta charset="utf-8">
@@ -21,10 +21,10 @@
 
       <!-- Open Graph -->
       <meta property="og:type" content="business.business">
-      <meta property="og:title" content="Kaldi | Great coffee with a conscience">
+      <meta property="og:title" content="Funke und Glanz | The branding agency that blows your socks off">
       <meta property="og:url" content="/">
       <meta property="og:image" content="/og-image.jpg">
 
   </head>
 
-  <body class="sans-serif mw8 center">
+  <body class="sans-serif mw7 center grey-4">
