--- a/src/css/imports/_custom.css
+++ b/src/css/imports/_custom.css
@@ -3,3 +3,24 @@
   letter-spacing: .02em;
   font-weight: normal;
 }
+
+.arrow-below{
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-top: 15px solid var(--grey-4);
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+}
+
+a:active, a:focus, a:active img, a:focus img{ 
+ outline: none; 
+}
+
+body{
+  background: none;
+}
+
+html{
+  box-shadow: inset 0 0 150px rgba(0,0,0,.4);
+}
