--- a/src/css/imports/_custom.css
+++ b/src/css/imports/_custom.css
@@ -22,5 +22,6 @@ body{
 }
 
 html{
-  box-shadow: inset 0 0 150px rgba(0,0,0,.4);
+  box-shadow: inset 0 150px 150px -150px rgba(0,0,0,.3), inset 0 -150px 150px -150px rgba(0,0,0,.3);
+  min-height: 100%;
 }
