--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -22,16 +22,18 @@
       </ul>
     </div>
   </div>
-  <div class="mb4 mt4 f2 ffh">
+  <div class="mt5 f2 ffh">
     <svg class="dib" height="30" width="60" viewBox="0 0 60 30"><path fill="transparent" stroke="#b5b5b5" stroke-width="1" d="M0,0 L30,30 L60,0"/></svg>
   </div>
   <ul>
-    {{ range .Params.showcase.images }}
+    {{ range .Params.showcase.sections }}
     <li>
-      <h3 class="ttu tl pl2 bb pb1 ffh b--grey-2">{{ .title }}</h3>
-      <img src="{{ .image }}" alt="{{ .title }}">
-      {{ if .description }}
-        <p>{{ .description }}</p>
+      <h3 class="ttu tl mt5 pl2 bb pb1 mb4 ffh b--grey-2">{{ .title }}</h3>
+        {{ range .images }}
+        <img class="mb2" src="{{ .image }}" alt="{{ .title }}">
+        {{ if .description }}
+          <p class="center mb5">{{ .description }}</p>
+        {{ end }}
       {{ end }}
     </li>
     {{ end }}
